# life-os

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 002_add_last_action_runs.py  006_mcp_servers.py  4a59e3b81428_initial_schema.py  677018546d5a_add_reasoning_to_agent_tool_calls.py  a3c8f1d2b5e7_add_agent_runs_and_tool_calls.py  b4d9e2f3c6a8_add_result_full.py  c5e0f3a4d7b9_add_conversations.py
backend/app/: config.py  main.py
backend/app/api/: briefing.py  chat.py  conversations.py  mcp_servers.py  modules.py  notes.py  proactive.py  profile.py  search.py  suggestions.py  voice.py
backend/app/engine/: activity_tracker.py  agent.py  confirmation.py  embeddings.py  json_text_extractor.py  mcp_manager.py  proactive.py  proactive_agent.py  proactive_executor.py  proactive_tools.py  scheduler.py  schema_engine.py  tool_executor.py  tool_generator.py
backend/app/models/: __init__.py  agent_run.py  chat_history.py  conversation.py  mcp_server.py  module.py  note.py  suggestion.py  user_profile.py
backend/app/schemas/: agent_run.py  chat.py  mcp_server_schema.py  module_schema.py  note.py  search.py  suggestion.py
backend/app/services/: mistral_client.py  web_search.py
frontend/: components.json  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/api/: activity.ts  chat.ts  client.ts  conversations.ts  mcp.ts  modules.ts  notes.ts  search.ts  suggestions.ts  voice.ts
(+61 files in other folders)
